--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "data-in-globe",
   "version": "1.0.0",
   "description": "Simple and easy way to manage global states.",
-  "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wndudqus/data-in-globe.git"
+    "url": "git+https://github.com/Juyeong-Byeon/data-in-globe.git"
   },
   "keywords": [
     "data",
-    "gloabl",
+    "global",
     "store"
   ],
-  "author": "juyeon",
+  "author": "juyeong",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/wndudqus/data-in-globe/issues"
+    "url": "https://github.com/Juyeong-Byeon/data-in-globe/issues"
   },
-  "homepage": "https://github.com/wndudqus/data-in-globe#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/Juyeong-Byeon/data-in-globe#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.2",
+    "typescript": "^4.9.5"
+  }
 }
