--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: |
+          actions/checkout@v2,
+          actions/setup-node@v3
         with:
           node-version: '16'
 
