--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       
+      - name: Checkout  
+        uses: actions/checkout@v2
+      
       - name: Setup Node.js
-        uses: |
-          actions/checkout@v2,
-          actions/setup-node@v3
+        uses: actions/setup-node@v3
+      
         with:
           node-version: '16'
 
