--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "test": "jest",
     "build": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Juyeong-Byeon/data-in-globe.git"
-  },
+  "repository": "git+https://github.com/Juyeong-Byeon/data-in-globe.git",
   "keywords": [
     "data",
     "global",
@@ -24,7 +21,11 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.2",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "main": "index.js"
 }
