--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,9 @@
     "plugins": [
         "prettier"
     ],
-    "rules": {}
+    "rules": {
+        "prettier/prettier": "error",
+        "quotes": "error",
+        "arrow-spacing": "error"
+    }
 }
