--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencys
         run: yarn install
 
+      - name: Run lint
+        run: yarn run lint
+
       - name: Run tests
         run: yarn run test
       
