--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple and easy way to manage global states.",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint&&tsc --noEmit&&prettier --check **/src/**"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,11 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.2",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "main": "index.js"
 }
