--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "data-in-globe",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Simple and easy way to manage global states.",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "lint": "eslint&&tsc --noEmit&&prettier --check **/src/**"
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "clean": "rm -rf ./dist/*",
+    "build:esm": "tsc -b tsconfig.esm.json",
+    "build:cjs": "tsc -b tsconfig.cjs.json",
+    "lint": "eslint&&tsc --noEmit&&prettier --check **/src/**",
+    "prepack": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Juyeong-Byeon/data-in-globe.git"
+    "url": "https://github.com/Juyeong-Byeon/data-in-globe.git"
   },
   "keywords": [
     "data",
@@ -29,7 +34,30 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.2",
     "prettier": "^2.8.4",
+    "semantic-release": "^21.1.1",
     "typescript": "^4.9.5"
   },
-  "main": "index.js"
+  "main": ".dist/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
+    }
+  },
+  "files": [
+    "./dist/**/*",
+    "./src/**/*"
+  ],
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "release": {
+    "branches": ["main"]
+  }
 }
