buld: fix scope

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "./src/**/*"
   ],
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "release": {
     "branches": ["main"]
