--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/react": "^18.2.21",
+    "@types/use-sync-external-store": "^0.0.3",
     "eslint": "^8.34.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.2",
