--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,7 @@
       "declarationMap": true,
       "allowSyntheticDefaultImports": true,
       "outDir": "./dist", /* Specify an output folder for all emitted files. */
+      "declarationDir": ".",
     },
     "files": ["./src/index.ts"],
     "exclude": [
