Revert "ts support (#7)"
This reverts commit 16cd6c9d7d72c0b99fcb0d379576b94f6abf58ba.

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -6,5 +6,6 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "outDir": "./dist/cjs",
+        "declarationDir": "./dist/cjs/types",
     }
 }
