--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "data-in-globe",
   "version": "0.0.0-development",
-  "type": "module",
   "description": "Simple and easy way to manage global states.",
   "scripts": {
     "test": "jest",
@@ -46,22 +45,20 @@
   },
   "main": ".dist/index.js",
   "exports": {
-    "./package.json": "./package.json",
     ".": {
       "import": {
         "types": "./dist/esm/types/index.d.ts",
         "default": "./dist/esm/index.js"
       },
       "require": {
-        "types": "./dist/cjs/types/index.d.cts",
-        "default": "./dist/cjs/index.cjs"
+        "types": "./dist/cjs/types/index.d.ts",
+        "default": "./dist/cjs/index.js"
       }
     }
   },
   "files": [
     "./dist/**/*",
-    "./src/**/*",
-    "*.d.ts"
+    "./src/**/*"
   ],
   "publishConfig": {
     "access": "public"
