--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -6,5 +6,6 @@
     "module": "ESNext",
     "moduleResolution": "NodeNext",
     "outDir": "./dist/esm/",
+    "declarationDir": "./dist/esm/types",
   }
 }
